--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-      "name": "MissKristina",
+      "name": "MissPhantom",
       "description": "Telegram group management bot.",
       "keywords": [
          "telegram",
